add soundparsing
